# neuralland

./: next.config.mjs
app/: page.tsx
app/chat/[chatid]/: page.tsx
back/: .gitignore  explain.py  main.py  pyproject.toml
front/: package-lock.json  package.json  pnpm-lock.yaml
front/app/: page.tsx
front/app/api/get-features/: route.ts
front/app/chat/[chatid]/: page.tsx
front/app/report/[chatid]/: page.tsx
front/components/ui/: spinner.tsx
front/lib/: types.ts
